支持网易云中文歌词

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "buid": "webpack -p",
-    "dev": "webpack"
+    "dev": "webpack --watch"
   },
   "author": "",
   "license": "ISC"
-} 
+}
